Fix package paths in bumpversion config

--- a/scripts/.bumpversion.cfg
+++ b/scripts/.bumpversion.cfg
@@ -9,13 +9,13 @@ search = # develop
 replace = # develop
 	# {new_version}
 
-[bumpversion:file:hidra.spec]
+[bumpversion:file:package/hidra.spec]
 search = %changelog
 replace = %changelog
 	* {now:%a %b %d %Y} Manuela Kuhn <manuela.kuhn@desy.de> - {new_version}-1
 	- Bump version
 
-[bumpversion:file:debian/changelog]
+[bumpversion:file:package/debian/changelog]
 search = bumpversion_placeholder
-replace = 
+replace =
 
