--- a/scripts/.bumpversion_prework.cfg
+++ b/scripts/.bumpversion_prework.cfg
@@ -3,11 +3,11 @@ current_version = 4.1.8
 tag = False
 commit = False
 
-[bumpversion:file:hidra.spec]
+[bumpversion:file:package/hidra.spec]
 search = Version:	{current_version}
 replace = Version:	{new_version}
 
-[bumpversion:file:debian/changelog]
+[bumpversion:file:package/debian/changelog]
 search = hidra ({current_version}-
 replace = hidra ({new_version}-1+deb9u5~fsec) stretch; urgency=low
 	bumpversion_placeholder
