--- a/scripts/package_building/Dockerfile.build_centos7
+++ b/scripts/package_building/Dockerfile.build_centos7
@@ -5,3 +5,5 @@ RUN yum update -y && yum install -y \
     rpm-build \
     python-devel \
     python-setuptools
+    python3-devel \
+    python3-setuptools
