--- a/package/debian/control
+++ b/package/debian/control
@@ -2,7 +2,9 @@ Source: hidra
 Section: science
 Priority: optional
 Maintainer: Manuela Kuhn <manuela.kuhn@desy.de>
-Build-Depends: debhelper (>= 9.0.0), python, dh-python, python-dev, python-setuptools
+Build-Depends: debhelper (>= 9.0.0), dh-python,
+  python, python-dev, python-setuptools,
+  python3, python3-dev, python3-setuptools
 Standards-Version: 4.1.4
 Homepage: https://github.com/hidra-org/hidra
 
@@ -30,5 +32,11 @@ Description: The hidra control client
 Package: python-hidra
 Architecture: any
 Depends: python, python-zmq (>= 14.6.0), python-pathlib2, python-logutils, python-yaml, python-ldap3
+Description: python modules for hidra
+ Python modules for HiDRA ( High performance data multiplexing tool )
+
+Package: python3-hidra
+Architecture: any
+Depends: python3, python3-zmq (>= 14.6.0), python3-yaml, python3-ldap3
 Description: python modules for hidra
  Python modules for HiDRA ( High performance data multiplexing tool )
