--- a/scripts/package_building/Dockerfile.build_debian9
+++ b/scripts/package_building/Dockerfile.build_debian9
@@ -6,4 +6,7 @@ RUN apt update && apt install -y \
     python \
     dh-python \
     python-dev \
-    python-setuptools
+    python-setuptools \
+    python3 \
+    python3-dev \
+    python3-setuptools
