--- a/scripts/package_building/Dockerfile.build_centos7
+++ b/scripts/package_building/Dockerfile.build_centos7
@@ -4,6 +4,6 @@ RUN yum update -y && yum install -y \
     git \
     rpm-build \
     python-devel \
-    python-setuptools
+    python-setuptools \
     python3-devel \
     python3-setuptools
