--- a/test/docker/control-client/Dockerfile
+++ b/test/docker/control-client/Dockerfile
@@ -2,8 +2,8 @@ FROM centos:7
 
 # Setup repos
 RUN yum update -y && yum install -y epel-release \
-    && yum install -y less python-pip \
-    && pip install -U pip && pip install debugpy
+    && yum install -y less python3-pip \
+    && python3 -m pip install -U pip && python3 -m pip install debugpy
 
 COPY *.rpm /rpms/
 
