--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -2,9 +2,9 @@ FROM ubuntu
 
 RUN apt update && apt install -y \
     git \
-    python \
+    python3 \
     python-pip
-RUN pip install future pyzmq pathlib2 pyyaml logutils ldap3
+RUN pip install future pyzmq pyyaml ldap3
 RUN cd /opt && git clone https://github.com/hidra-org/hidra.git
 # RUN cd /opt/hidra && git checkout develop
-RUN cp -r /opt/hidra/src/api/python/hidra /usr/local/lib/python2.7/dist-packages/
+RUN PYTHON_VERSION=$(ls /usr/local/lib/ | egrep 'python3.*') && cp -r /opt/hidra/src/api/python/hidra /usr/local/lib/PYTHON_VERSION/dist-packages/
