--- a/docker/Dockerfile.receiver
+++ b/docker/Dockerfile.receiver
@@ -2,20 +2,18 @@ FROM ubuntu
 
 RUN apt update && apt install -y \
     git \
-    python \
-    python-pip
-RUN pip install \
+    python3 \
+    python3-pip
+RUN pip3 install \
     pyzmq \
     setproctitle \
     future \
-    logutils \
     pyyaml \
-    pathlib2 \
     ldap3
 # RUN cd /opt && \
 #     git clone https://github.com/hidra-org/hidra.git && \
 #     cd hidra && \
 #     git checkout develop && \
 #     mkdir /var/log/hidra
-#ENTRYPOINT ["python", "/opt/hidra/src/hidra/receiver/datareceiver.py", "--verbose", "--onscreen", "debug", "--config_file", "/opt/hidra/conf/datareceiver_docker.yaml"]
-ENTRYPOINT bash /opt/hidra/docker/set_env_and_run.sh python /opt/hidra/src/hidra/receiver/datareceiver.py --verbose --config_file /opt/hidra/conf/datareceiver_docker.yaml --onscreen debug
+#ENTRYPOINT ["python3", "/opt/hidra/src/hidra/receiver/datareceiver.py", "--verbose", "--onscreen", "debug", "--config_file", "/opt/hidra/conf/datareceiver_docker.yaml"]
+ENTRYPOINT bash /opt/hidra/docker/set_env_and_run.sh python3 /opt/hidra/src/hidra/receiver/datareceiver.py --verbose --config_file /opt/hidra/conf/datareceiver_docker.yaml --onscreen debug
