--- a/docker/Dockerfile.sender
+++ b/docker/Dockerfile.sender
@@ -2,21 +2,25 @@ FROM ubuntu
 
 RUN apt update && apt install -y \
     git \
-    python \
-    python-pip
-RUN pip install \
+    python3 \
+    python3-pip
+RUN pip3 install \
     pyzmq \
     setproctitle \
     future \
-    logutils \
     pyyaml \
-    inotifyx \
-    pathlib2 \
     ldap3
+# fix inotifyx for python3
+RUN git clone https://github.com/hidra-org/hidra-dependencies.git &&\
+    cd hidra-dependencies/inotifyx &&\
+    patch -ruN -p1 -d inotifyx-0.2.2 < 0001-python3-compatibility.patch &&\
+    patch -ruN -p1 -d inotifyx-0.2.2 < 0002-update-C-binding-for-python3.patch &&\
+    pip3 install --user ./inotifyx-0.2.2
+
 # RUN cd /opt && \
 #     git clone https://github.com/hidra-org/hidra.git && \
 #     cd hidra && \
 #     git checkout develop && \
 #     mkdir /var/log/hidra
-#ENTRYPOINT ["python", "/opt/hidra/src/hidra/sender/datamanager.py", "--verbose", "--config_file", "/opt/hidra/conf/datamanager_docker.yaml", "--onscreen", "debug"]
-ENTRYPOINT bash /opt/hidra/docker/set_env_and_run.sh python /opt/hidra/src/hidra/sender/datamanager.py --verbose --config_file /opt/hidra/conf/datamanager_docker.yaml --onscreen debug
+#ENTRYPOINT ["python3", "/opt/hidra/src/hidra/sender/datamanager.py", "--verbose", "--config_file", "/opt/hidra/conf/datamanager_docker.yaml", "--onscreen", "debug"]
+ENTRYPOINT bash /opt/hidra/docker/set_env_and_run.sh python3 /opt/hidra/src/hidra/sender/datamanager.py --verbose --config_file /opt/hidra/conf/datamanager_docker.yaml --onscreen debug
