--- a/package/debian/control
+++ b/package/debian/control
@@ -10,7 +10,7 @@ Homepage: https://github.com/hidra-org/hidra
 
 Package: hidra
 Architecture: any
-Depends: python-hidra (= ${binary:Version}), python, systemd, python-inotifyx (>= 0.2.2), python-setproctitle, python-future, python-pathlib2
+Depends: python3-hidra (= ${binary:Version}), python3, systemd, python3-inotifyx (>= 0.2.2), python3-setproctitle, python3-future
 Description: High performance data multiplexing tool
  HiDRA is a generic tool set for high performance data multiplexing
  with different qualities of service and is based on Python and ZeroMQ.
@@ -25,7 +25,7 @@ Description: High performance data multiplexing tool
 
 Package: hidra-control-client
 Architecture: any
-Depends: python-hidra (= ${binary:Version}), python
+Depends: python3-hidra (= ${binary:Version}), python3
 Description: The hidra control client
  For machines like Eiger detectors which only need the control client
 
