--- a/package/debian/control
+++ b/package/debian/control
@@ -31,7 +31,7 @@ Description: The hidra control client
 
 Package: python-hidra
 Architecture: any
-Depends: python, python-zmq (>= 14.6.0), python-pathlib2, python-logutils, python-yaml, python-ldap3
+Depends: python, python-zmq (>= 14.6.0), python-pathlib2, python-logutils, python-yaml, python-ldap3, python-future
 Description: python modules for hidra
  Python modules for HiDRA ( High performance data multiplexing tool )
 
