--- a/scripts/.bumpversion.cfg
+++ b/scripts/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 4.2.5
+current_version = 4.3.0
 tag = False
 commit = False
 files = freeze_setup.py src/api/python/hidra/utils/_version.py
@@ -12,10 +12,9 @@ replace = # develop
 [bumpversion:file:package/hidra.spec]
 search = %changelog
 replace = %changelog
-	* {now:%a %b %d %Y} Manuela Kuhn <manuela.kuhn@desy.de> - {new_version}-1
+	* {now:%a %b %d %Y} T. Schoof <tim.schoof@desy.de> - {new_version}-1
 	- Bump version
 
 [bumpversion:file:package/debian/changelog]
 search = bumpversion_placeholder
-replace = 
-
+replace =
