--- a/scripts/.bumpversion_prework.cfg
+++ b/scripts/.bumpversion_prework.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 4.2.5
+current_version = 4.3.0
 tag = False
 commit = False
 
@@ -13,6 +13,5 @@ replace = hidra ({new_version}-1+deb9u5~fsec) stretch; urgency=low
 	bumpversion_placeholder
 	bumpversion_placeholder  * Bump version
 	bumpversion_placeholder
-	bumpversion_placeholder -- M. Kuhn <manuela.kuhn@desy.de>  {now:%a, %d %b %Y %H:%M:%S %z}
+	bumpversion_placeholder -- T. Schoof <tim.schoof@desy.de>  {now:%a, %d %b %Y %H:%M:%S %z}
 	hidra ({current_version}-
-
