Improve eiger tests
* Write temporary files so that incomplete files are not listed in the
  index
* Mount webcontent directory so that files can be investigated from
  outside the container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
         container_name: eiger
         hostname: eiger
         domainname: hidra.test
+        volumes:
+            - ${HIDRA_TESTDIR}/eiger/webcontent/:/webcontent
         networks:
             hidra:
                 aliases:
