Do not delete files if storing failed
If the target directory does not exist, storing the file fails.
Before this change, the file was still deleted from the source.

--- a/test/docker/receiver/control_server.yaml
+++ b/test/docker/receiver/control_server.yaml
@@ -44,6 +44,7 @@ hidraconfig_static:
                 - commissioning/raw
                 - commissioning/scratch_bl
                 - local
+                - non_existent/raw
             # monitored_events:
             #     IN_CLOSE_WRITE :
             #         - .tif
