Fix bumpversion for multiple debian directories

--- a/scripts/.bumpversion.cfg
+++ b/scripts/.bumpversion.cfg
@@ -15,6 +15,10 @@ replace = %changelog
 	* {now:%a %b %d %Y} T. Schoof <tim.schoof@desy.de> - {new_version}-1
 	- Bump version
 
-[bumpversion:file:package/debian/changelog]
+[bumpversion:file:package/debian9/changelog]
+search = bumpversion_placeholder
+replace =
+
+[bumpversion:file:package/debian10/changelog]
 search = bumpversion_placeholder
 replace =
