--- a/scripts/.bumpversion_prework.cfg
+++ b/scripts/.bumpversion_prework.cfg
@@ -7,7 +7,16 @@ commit = False
 search = Version:	{current_version}
 replace = Version:	{new_version}
 
-[bumpversion:file:package/debian/changelog]
+[bumpversion:file:package/debian9/changelog]
+search = hidra ({current_version}-
+replace = hidra ({new_version}-1+deb9u5~fsec) stretch; urgency=low
+	bumpversion_placeholder
+	bumpversion_placeholder  * Bump version
+	bumpversion_placeholder
+	bumpversion_placeholder -- T. Schoof <tim.schoof@desy.de>  {now:%a, %d %b %Y %H:%M:%S %z}
+	hidra ({current_version}-
+
+[bumpversion:file:package/debian10/changelog]
 search = hidra ({current_version}-
 replace = hidra ({new_version}-1+deb9u5~fsec) stretch; urgency=low
 	bumpversion_placeholder
