--- a/test/docker/transfer-client/Dockerfile
+++ b/test/docker/transfer-client/Dockerfile
@@ -3,7 +3,8 @@ FROM centos:7
 # Setup repos
 RUN yum update -y && yum install -y epel-release \
     && yum install -y less python-pip \
-    && pip install -U pip && pip install debugpy
+    && pip install --only-binary :all: -U pip \
+    && pip install --prefer-binary debugpy
 
 COPY *.rpm /rpms/
 
