--- a/scripts/package_building/Dockerfile.build_debian11
+++ b/scripts/package_building/Dockerfile.build_debian11
@@ -5,6 +5,7 @@ RUN apt update && apt install -y \
     dpkg-dev \
     debhelper \
     dh-python \
+    lintian \
     python3 \
     python3-dev \
     python3-setuptools
