--- a/test/docker/sender/datamanager_p00.yaml
+++ b/test/docker/sender/datamanager_p00.yaml
@@ -26,9 +26,7 @@ general:
 eventdetector:
     # Type of event detector to use (options are:
     # inotifyx_events, watchdog_events, zmq_events, http_events)
-    # Inotifyx is not python3 compatible,
-    # see https://bugs.launchpad.net/inotifyx/+bug/1006053
-    type: inotify_events
+    type: inotifyx_events
 
     inotifyx_events:
         # Directory to be monitor for changes
