--- a/test/docker/ldap/Dockerfile
+++ b/test/docker/ldap/Dockerfile
@@ -2,3 +2,6 @@
 FROM osixia/openldap:1.4.0
 
 COPY netgroup.ldif /container/service/slapd/assets/config/bootstrap/ldif/custom/
+COPY remove_all.ldif remove_all.ldif
+COPY remove_eiger.ldif remove_eiger.ldif
+COPY add_all.ldif add_all.ldif
