--- a/scripts/package_building/Dockerfile.build_debian9
+++ b/scripts/package_building/Dockerfile.build_debian9
@@ -1,5 +1,13 @@
 FROM debian:stretch
 
+# Fix archived repositories:
+# https://www.geekersdigest.com/apt-etc-apt-sources-list-for-every-debian-release/
+RUN echo "\
+    deb http://archive.debian.org/debian/ stretch main contrib non-free\n\
+    deb http://archive.debian.org/debian/ stretch-proposed-updates main contrib non-free\n\
+    deb http://archive.debian.org/debian-security stretch/updates main contrib non-free" \
+    > /etc/apt/sources.list
+
 RUN apt update && apt install -y \
     dpkg-dev \
     debhelper \
