Fix test of control client netgroup check

--- a/test/docker/ldap/Dockerfile
+++ b/test/docker/ldap/Dockerfile
@@ -4,4 +4,5 @@ FROM osixia/openldap:1.4.0
 COPY netgroup.ldif /container/service/slapd/assets/config/bootstrap/ldif/custom/
 COPY remove_all.ldif remove_all.ldif
 COPY remove_eiger.ldif remove_eiger.ldif
+COPY remove_control_client.ldif remove_control_client.ldif
 COPY add_all.ldif add_all.ldif
