Remove Python 2 for Debian 12 tests

--- a/test/docker/sender/Dockerfile_debian12
+++ b/test/docker/sender/Dockerfile_debian12
@@ -2,7 +2,7 @@ FROM debian:12
 
 COPY *deb12*.deb /debs/
 
-RUN apt update && apt install -y systemd python python3-watchdog /debs/*
+RUN apt update && apt install -y systemd python3-watchdog /debs/*
 
 # setup systemctl-replacement-script
 COPY systemctl.py /bin/systemctl
