Update bumpversion config and script

--- a/scripts/.bumpversion_prework.cfg
+++ b/scripts/.bumpversion_prework.cfg
@@ -18,10 +18,27 @@ replace = hidra ({new_version}-1+deb9u5~fsec) stretch; urgency=low
 
 [bumpversion:file:package/debian10/changelog]
 search = hidra ({current_version}-
-replace = hidra ({new_version}-1+deb9u5~fsec) stretch; urgency=low
+replace = hidra ({new_version}-1+deb10~fsec) buster; urgency=low
 	bumpversion_placeholder
 	bumpversion_placeholder  * Bump version
 	bumpversion_placeholder
 	bumpversion_placeholder -- T. Schoof <tim.schoof@desy.de>  {now:%a, %d %b %Y %H:%M:%S %z}
 	hidra ({current_version}-
 
+[bumpversion:file:package/debian11/changelog]
+search = hidra ({current_version}-
+replace = hidra ({new_version}-1+deb11u1~fsec) bullseye; urgency=low
+	bumpversion_placeholder
+	bumpversion_placeholder  * Bump version
+	bumpversion_placeholder
+	bumpversion_placeholder -- T. Schoof <tim.schoof@desy.de>  {now:%a, %d %b %Y %H:%M:%S %z}
+	hidra ({current_version}-
+
+[bumpversion:file:package/debian12/changelog]
+search = hidra ({current_version}-
+replace = hidra ({new_version}-1+deb12~fsec) bookworm; urgency=low
+	bumpversion_placeholder
+	bumpversion_placeholder  * Bump version
+	bumpversion_placeholder
+	bumpversion_placeholder -- T. Schoof <tim.schoof@desy.de>  {now:%a, %d %b %Y %H:%M:%S %z}
+	hidra ({current_version}-
