Fix breaking change in bumpversion

--- a/scripts/.bumpversion.cfg
+++ b/scripts/.bumpversion.cfg
@@ -7,8 +7,7 @@ files = freeze_setup.py src/api/python/hidra/utils/_version.py
 [bumpversion:file:HISTORY.md]
 search = # develop
 replace = # develop
-
-          # {new_version}
+	{#} {new_version}
 
 [bumpversion:file:package/hidra.spec]
 search = %changelog
