--- a/scripts/package_building/Dockerfile.build_centos7
+++ b/scripts/package_building/Dockerfile.build_centos7
@@ -1,5 +1,9 @@
 FROM centos:7
 
+# Fix archived repositories
+RUN sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
+    sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+
 RUN yum update -y && yum install -y \
     git \
     rpm-build \
