--- a/scripts/package_building/Vagrantfile
+++ b/scripts/package_building/Vagrantfile
@@ -61,6 +61,8 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
+    sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+    sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
     yum install -y yum-utils git gdb python3-pip psmisc
     sudo debuginfo-install -y glibc
     yum install -y python-debuginfo
