--- a/test/docker/sender/Dockerfile_freeze
+++ b/test/docker/sender/Dockerfile_freeze
@@ -1,7 +1,9 @@
 FROM centos:7
 
 # needed for pidof used in hidra.sh
-RUN yum install -y sysvinit-tools psmisc
+RUN sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* \
+    && sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* \
+    && yum install -y sysvinit-tools psmisc
 
 # needed for status used in hidra.sh
 COPY initfunctions.sh /etc/rc.d/init.d/functions
