Replace Debian 10 repos

--- a/scripts/package_building/Dockerfile.build_debian10
+++ b/scripts/package_building/Dockerfile.build_debian10
@@ -1,5 +1,14 @@
 FROM debian:buster
 
+# Fix archived repositories:
+# https://www.geekersdigest.com/apt-etc-apt-sources-list-for-every-debian-release/
+RUN echo "\
+    deb http://archive.debian.org/debian/ buster main non-free contrib\n\
+    deb http://archive.debian.org/debian/ buster-updates main non-free contrib\n\
+    deb http://archive.debian.org/debian/ buster-proposed-updates main non-free contrib\n\
+    deb http://archive.debian.org/debian-security buster/updates main contrib non-free" \
+    > /etc/apt/sources.list
+
 RUN apt update && apt install -y \
     lsb-release \
     dpkg-dev \
